sort.pancake.BurnedPancake.scala.error
Erreur de compilation :
BurnedPancake:13: error: not found: value i
        flip(i+1)
             ^